# PhantomMenace---Core

./: .gitignore  CMakeLists.txt
cmake/Modules/: FindPmIniParser.cmake
include/: PM_Element.h  PM_GrammarElement.h  PM_ParsingEnvironment.h  PM_StaticFunctions.h  PM_TokenElement.h  PM_Validator.h
src/: CMakeLists.txt  PM_Element.cpp  PM_GrammarElement.cpp  PM_ParsingEnvironment.cpp  PM_StaticFunctions.cpp  PM_TokenElement.cpp  PM_Validator.cpp
test/: CMakeLists.txt  GrammarExample.ini  print_log.cpp  validate_grammar.cpp  validate_string.cpp  validate_tokens.cpp
